Added Restcontroller for the ORCID Crud operations.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
 app:
     resource: "@AppBundle/Controller/"
-    type:     annotation
+    type: annotation
+
+orcid:
+    resource: "@AppBundle/Controller/OrcidRestController.php"
+    type: rest
+    prefix: /api/
