--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "doctrine/doctrine-bundle": "~1.4",
     "symfony/assetic-bundle": "~2.3",
     "symfony/swiftmailer-bundle": "~2.3",
+    "symfony/security": "~2.3",
     "symfony/monolog-bundle": "~2.4",
     "sensio/distribution-bundle": "~4.0",
     "sensio/framework-extra-bundle": "^3.0.2",
@@ -21,6 +22,8 @@
     "jms/serializer-bundle": "^1.0",
     "friendsofsymfony/rest-bundle": "^1.0",
     "nelmio/api-doc-bundle": "^2.4",
+    "nelmio/security-bundle": "1.8.0",
+    "fortawesome/font-awesome": "*",
     "friendsofsymfony/http-cache-bundle": "^1.0",
     "willdurand/hateoas-bundle": "^1.0",
     "hautelook/templated-uri-bundle": "^2.0",
