--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,47 +80,13 @@ swiftmailer:
     spool:     { type: memory }
 
 fos_rest:
-    disable_csrf_role: ROLE_API
     param_fetcher_listener: true
-    routing_loader:
-      include_format: false
-    view:
-        mime_types:
-            json: ['application/json', 'application/json;version=1.0', 'application/json;version=1.1', 'application/json;version=1.2']
-        view_response_listener: 'force'
-        formats:
-            xml:  false
-            json: true
-        templating_formats:
-            html: false
-    format_listener:
-        rules:
-            - { path: ^/, priorities: [ json ], fallback_format: json, prefer_extension: true }
-        media_type:
-            version_regex: '/(v|version)=(?P<version>[0-9\.]+)/'
-    exception:
-        codes:
-            'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
-            'Doctrine\ORM\OptimisticLockException': HTTP_CONFLICT
-        messages:
-            'Symfony\Component\Routing\Exception\ResourceNotFoundException': true
-    allowed_methods_listener: true
-    access_denied_listener:
-        json: true
     body_listener: true
-
-fos_http_cache:
-    cache_control:
-        rules:
-            # the controls section values are used in a call to Response::setCache();
-            -
-                match:
-                    path: ^/orcids
-                    methods: [GET, HEAD]
-                headers:
-                    cache_control: { public: true, max_age: 15, s_maxage: 30 }
-                    last_modified: "-1 hour"
-                    vary: [Accept-Encoding, Accept-Language]
+    format_listener: true
+    view:
+        view_response_listener: 'force'
+    routing_loader:
+        include_format: false
 
 monolog:
     handlers:
@@ -134,3 +100,12 @@ monolog:
         chromephp:
             type:  chromephp
             level: info
+
+nelmio_security:
+    clickjacking:
+        paths:
+            '^/.*': DENY
+        content_types: []
+    xss_protection:
+        enabled: true
+        mode_block: true
