--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "psr-4": { "": "src/" }
   },
   "require": {
-    "php": ">=5.4.0",
+    "php": ">=5.6.0",
     "symfony/symfony": "2.7.*",
     "symfony/event-dispatcher" : "2.7.*",
     "doctrine/orm": "^2.4.8",
@@ -27,7 +27,8 @@
     "friendsofsymfony/http-cache-bundle": "^1.0",
     "willdurand/hateoas-bundle": "^1.0",
     "hautelook/templated-uri-bundle": "^2.0",
-    "willdurand/rest-extra-bundle": "^1.0"
+    "willdurand/rest-extra-bundle": "^1.0",
+    "surfnet/stepup-saml-bundle": "~1.5"
   },
   "require-dev": {
     "sensio/generator-bundle": "~2.3"
