--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -1,9 +1,29 @@
 services:
-#  samlinteractionprovider:
-#        class: AppBundle\Security\Authentication\SamlInteractionProvider
-#        arguments:
-#            - @surfnet_saml.hosted.service_provider
-#            - @surfnet_saml.remote.idp
-#            - @surfnet_saml.http.redirect_binding
-#            - @surfnet_saml.http.post_binding
-#            - @profile.saml.state_handler
+
+    app.saml.session:
+        class: Symfony\Component\HttpFoundation\Session\Attribute\NamespacedAttributeBag
+        factory: [ '@session', 'getBag' ]
+        arguments: [ 'profile' ]
+
+    app.saml.state_handler:
+        public: false
+        class: AppBundle\Saml\StateHandler
+        arguments:
+            - @app.saml.session
+
+    app.interactionprovider:
+        class: AppBundle\Security\Authentication\SamlInteractionProvider
+        arguments:
+            - @surfnet_saml.hosted.service_provider
+            - @surfnet_saml.remote.idp
+            - @surfnet_saml.http.redirect_binding
+            - @surfnet_saml.http.post_binding
+            - @app.saml.state_handler
+    app.session.namespaced_attribute_bag:
+        public: false
+        class: Symfony\Component\HttpFoundation\Session\Attribute\NamespacedAttributeBag
+        arguments:
+            - '__profile__'
+            - '/'
+        calls:
+            - [setName, ['profile']]
