More SAML setup

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -7,3 +7,7 @@ orcid:
     defaults: {_format: json}
     type: rest
     prefix: /api/
+
+appbundle:
+    resource:   "@AppBundle/Resources/config/routing.yml"
+    prefix:     /
