--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -114,11 +114,11 @@ surfnet_saml:
     hosted:
         service_provider:
             enabled: true
-            assertion_consumer_route: profile.saml_consume_assertion
+            assertion_consumer_route: app.saml_consume_assertion
             public_key: %saml_sp_publickey%
             private_key: %saml_sp_privatekey%
         metadata:
-            entity_id_route: profile.saml_metadata
+            entity_id_route: app.saml_metadata
             public_key: %saml_metadata_publickey%
             private_key: %saml_metadata_privatekey%
     remote:
