Finished SP part. Logging in to Conext

--- a/src/AppBundle/Resources/config/controllers.yml
+++ b/src/AppBundle/Resources/config/controllers.yml
@@ -3,3 +3,5 @@ services:
         class: AppBundle\Controller\SamlController
         arguments:
             - @surfnet_saml.metadata_factory
+        calls:
+            - [setContainer, [ "@service_container"] ]
