--- a/web/package.json
+++ b/web/package.json
@@ -27,9 +27,12 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-sass": "^1.1.0",
+    "grunt-sass-import": "^0.1.0",
     "load-grunt-tasks": "^3.3.0"
   },
   "dependencies": {
-    "css-toggle-switch": "^3.2.0"
+    "bourbon": "^4.2.6",
+    "css-toggle-switch": "^3.2.0",
+    "neat": "^1.2.2"
   }
 }
