--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -26,3 +26,6 @@ services:
             - '/'
         calls:
             - [setName, ['app']]
+
+    app.guzzle:
+        class: GuzzleHttp\Client
