Code changes in order to get the UI fully working

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -27,5 +27,11 @@ services:
         calls:
             - [setName, ['app']]
 
+    app.orcid.service:
+        class: AppBundle\Connections\Service
+        factory: [ 'AppBundle\Connections\ServiceFactory', 'create' ]
+        arguments:
+            - @session
+
     app.guzzle:
         class: GuzzleHttp\Client
