--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -22,6 +22,7 @@ framework:
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
+    translator: { fallbacks: ["%locale%"] }
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
