--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "guzzlehttp/guzzle": "~6.0"
   },
   "require-dev": {
-    "sensio/generator-bundle": "~2.3"
+    "sensio/generator-bundle": "~2.3",
+    "ibuildings/qa-tools": "~1.1"
   },
   "scripts": {
     "post-install-cmd": [
