--- a/provision/group_vars/vagrant-app.yml
+++ b/provision/group_vars/vagrant-app.yml
@@ -3,7 +3,10 @@
 php_group: vagrant
 php_user: vagrant
 timezone: "Europe/Amsterdam"
-xdebug: true,
+xdebug_enable: true
+xhprof_enable: true
+ntp_enable: true
+mailhog_enable: true
 servername: "dev.myconnections.org"
 basedir: "/vagrant"
 sshkey: true
