--- a/provision/provision.yml
+++ b/provision/provision.yml
@@ -30,9 +30,9 @@
   roles:
     - { role: geerlingguy.repo-remi }
     - { role: geerlingguy.repo-epel }
-    - { role: geerlingguy.ntp, ntp_timezone: "{{ timezone }}" }
+    - { role: geerlingguy.ntp, ntp_timezone: "{{ timezone }}", when: ntp_enable }
     - { role: geerlingguy.mailhog,
-          mailhog_binary_url: "https://github.com/mailhog/MailHog/releases/download/v0.1.8/MailHog_linux_amd64" }
+          mailhog_binary_url: "https://github.com/mailhog/MailHog/releases/download/v0.1.8/MailHog_linux_amd64", when: mailhog_enable }
     - { role: geerlingguy.php,
           php_enablerepo: "remi-php56",
           php_date_timezone: "{{ timezone }}",
@@ -48,9 +48,9 @@
           php_xdebug_idekey: "default",
           php_xdebug_remote_enable: 1,
           php_xdebug_remote_connect_back: 1,
-          when: xdebug
+          when: xdebug_enable
       }
-    - { role: geerlingguy.php-xhprof, xhprof_output_dir: "{{ projectdir }}/xhprof" }
+    - { role: geerlingguy.php-xhprof, xhprof_output_dir: "{{ projectdir }}/xhprof", when: xhprof_enable }
     - { role: geerlingguy.nginx,
           nginx_remove_default_vhost: true,
           nginx_vhosts: "{{ vhosts }}"
