--- a/provision/deploy.yml
+++ b/provision/deploy.yml
@@ -16,7 +16,9 @@
         - { path: "{{ projectdir }}", owner: "{{ ansible_ssh_user }}", recurse: "no", mode: "0755" }
         - { path: "{{ projectdir }}/xhprof", owner: "{{ ansible_ssh_user }}", recurse: "no", mode: "0755" }
         - { path: "{{ projectdir }}/releases", owner: "{{ ansible_ssh_user }}", recurse: "no", mode: "0755" }
-        - { path: "{{ projectdir }}/files", owner: "{{ ansible_ssh_user}}", recurse: "yes", mode: "0777" }
+        - { path: "{{ projectdir }}/files", owner: "{{ ansible_ssh_user }}", recurse: "yes", mode: "0777" }
+        - { path: "{{ projectdir }}/logs", owner: "{{ ansible_ssh_user }}", recurse: "yes", mode: "0777" }
+        - { path: "{{ projectdir }}/cache", owner: "{{ ansible_ssh_user }}", recurse: "yes", mode: "0777" }
 
     - name: Checkout code
       git:
@@ -27,13 +29,36 @@
         dest="{{ projectdir }}/releases/{{ version }}-{{ postfix }}"
         version="{{ version }}"
 
-    - name: Setup symlinks
-      file: path="{{ item.path }}" src="{{ item.src }}" state=link force=yes owner="{{ ansible_ssh_user }}"
+    - name: Put cache/log dir in place
+      file: path="{{ item.path }}" state=absent force=yes
       with_items:
-        - { path: "{{ projectdir }}/latest", src: "{{ projectdir }}/releases/{{ version }}-{{ postfix }}" }
+        - { path: "{{ projectdir }}/releases/{{ version }}-{{ postfix }}/app/cache" }
+        - { path: "{{ projectdir }}/releases/{{ version }}-{{ postfix }}/app/logs" }
+
+    - name: Setup symlinks
+      become: yes
+      file: path="{{ item.path }}" src="{{ item.src }}" state=link force=yes owner="{{ php_user }}"
+      with_items:
+        - { path: "{{ projectdir }}/releases/{{ version }}-{{ postfix }}/app/cache", src: "{{ projectdir }}/cache" }
+        - { path: "{{ projectdir }}/releases/{{ version }}-{{ postfix }}/app/logs", src: "{{ projectdir }}/logs" }
 
     - name: Composer install
       composer:
         command: "install"
         no_dev: no
-        working_dir: "{{ projectdir}}/latest/"
+        working_dir: "{{ projectdir }}/releases/{{ version }}-{{ postfix }}"
+
+    - name: Make writeables writable
+      become: yes
+      file: path={{ item.path }} owner={{ php_user }} recurse=yes mode="0777" state=directory force=yes
+      with_items:
+        - { path: "{{ projectdir }}/logs" }
+        - { path: "{{ projectdir }}/cache" }
+
+    - name: Link deployment
+      file: path="{{ item.path }}" src="{{ item.src }}" state=link force=yes owner="{{ ansible_ssh_user }}"
+      with_items:
+        - { path: "{{ projectdir }}/latest", src: "{{ projectdir }}/releases/{{ version }}-{{ postfix }}" }
+
+    - name: Update database schema
+      command: ./console doctrine:schema:update --force chdir="{{ projectdir }}/latest/app"
