--- a/.travis.yml
+++ b/.travis.yml
@@ -28,12 +28,13 @@ cache:
 
 before_script:
   - phpenv config-add .travis.php.ini
+  - mysql -e "create database IF NOT EXISTS myconnections;"
   - composer self-update
   - composer install --prefer-dist
+  - app/console doctrine:database:create
 
 script:
-  - app/console doctrine:database:create
-  - cd app/;../bin/phpunit
+  - ant
 
 branches:
   only:
