--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,11 @@ cache:
 before_script:
   - phpenv config-add .travis.php.ini
   - mysql -e "create database IF NOT EXISTS myconnections;"
+  - cp app/config/parameters.yml.travis app/config/parameters.yml
   - composer self-update
-  - composer install --prefer-dist
-  - app/console doctrine:database:create
+  - composer install
+  - php app/console doctrine:database:create --env=test
+  - php app/console doctrine:schema:create --env=test
 
 script:
   - ant
