--- a/build.xml
+++ b/build.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="MyConnections" default="tests">
-    <target name="tests"
-            depends="phpunit-ci"/>
+<project name="MyConnections" default="build">
+    <target name="phpmd"
+            depends="phpmd-ci"/>
     <target name="build"
-            depends="php-lint-ci,phpmd-ci,phpcs-ci,phpcpd-ci,php-security-checker,phpunit-ci"/>
+            depends="php-lint-ci,phpcs-ci,phpcpd-ci,php-security-checker,phpunit-ci"/>
 
     <target name="get-changeset.php.raw"
             description="creates a list of changed php files separated by newline">
